# KindredHistories

./: .dockerignore  .firebaserc  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml
backend/: LOGIC.md  agent.py  auth.py  benchmark_embeddings.py  cache.py  compute_embeddings.py  config.py  database.py  embeddings.py  evals_compare_embeddings_time.py  facet_cache.py  gemini.py  generate_examples.py  initial_figures.txt  logic.py  main.py  models.py  request_coalescing.py  test_agent.py  test_facet_search.py  tools.py  user_service.py
evals/: .gitignore  __init__.py  begin_journey.py  generate_people.py  process_people.py
frontend/: .env.development  .env.production  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js  credits.json  dummyData.js  index.css
frontend/src/components/: AuthenticatedApp.jsx  ChatInterface.jsx  FacetFilterPanel.jsx  FacetedResultsView.jsx  GoogleSignInButton.jsx  PersonDetailModal.jsx  ResultsView.jsx  SearchHistorySidebar.jsx  StarryBackground.jsx  TestModeSidebar.jsx
frontend/src/context/: AuthContext.jsx
scripts/: clear_database.py  deploy.sh  populate_database_initial.py  setup_secrets.py  test_api.py  test_extract_facets.py  update_images.py  update_names.py  validate_database.py  verify_test_user.py
test-automation/: package.json  test.js
writeup/: .gitignore  forgotten_histories_v1.tex  generate_figures.py  literature_search_methodology.md  references.bib
